--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "survey-pdf": "^1.9.90",
     "survey-react-ui": "^1.9.90",
