--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "survey-core": "^1.9.91",
     "survey-pdf": "^1.9.90",
     "survey-react-ui": "^1.9.90",
     "web-vitals": "^2.1.4"
