--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,7 +12,10 @@ jobs:
       contents: read
       deployments: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: Bhacaz/checkout-files@v2
+        with:
+          files: wow
+      - run: cp -r wow/* . && rm -rf wow
       - run: npm ci
       - run: npm run build
       - name: Publish to Cloudflare Pages
