--- a/render/package.json
+++ b/render/package.json
@@ -4,23 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && URL=http://localhost:3000 PORT=8000 node dist/index.js",
-    "watch": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec 'npm start'"
+    "dev": "export URL=http://localhost:3000 PORT=8000 && pkill -9 -f puppeteer || true && ts-node src/index.ts",
+    "watch": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.21",
     "canvas": "^2.11.2",
     "express": "^4.18.2",
     "gifencoder": "^2.0.1",
     "png-file-stream": "^1.2.1",
+    "pngjs": "^7.0.0",
     "puppeteer": "^20.7.4",
+    "puppeteer-mass-screenshots": "^1.0.15",
+    "puppeteer-screen-recorder": "^2.1.2",
+    "tmp-promise": "^3.0.3",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/gifencoder": "^2.0.1",
     "@types/node": "^20.3.3",
-    "nodemon": "^2.0.22"
+    "@types/pngjs": "^6.0.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
