--- a/render/package.json
+++ b/render/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "export URL=http://localhost:3000 PORT=8000 && pkill -9 -f puppeteer || true && ts-node src/index.ts",
-    "watch": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run dev"
+    "watch-development": "env-cmd -f .env-development npm run watch",
+    "watch-goerli": "env-cmd -f .env-goerli npm run watch",
+    "watch-mainnet": "env-cmd -f .env-mainnet npm run watch",
+    "watch": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start",
+    "start": "pkill -9 -f puppeteer || true && env-cmd -f .env ts-node src/index.ts",
+    "start-test": "pkill -9 -f puppeteer || true && env-cmd -f .env ts-node src/test.ts",
+    "watch-test": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start-test",
+    "prod": "pkill -9 -f puppeteer || true && env-cmd -f .env.production ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
     "canvas": "^2.11.2",
+    "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "gifencoder": "^2.0.1",
+    "ipfs-http-client": "^56.0.2",
     "png-file-stream": "^1.2.1",
     "pngjs": "^7.0.0",
     "puppeteer": "^20.7.4",
@@ -23,6 +32,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/gifencoder": "^2.0.1",
     "@types/node": "^20.3.3",
