--- a/wow/package.json
+++ b/wow/package.json
@@ -25,6 +25,7 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
@@ -57,6 +58,7 @@
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.63.3",
     "sass-loader": "^12.3.0",
+    "seedrandom": "^3.0.5",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
@@ -69,14 +71,18 @@
     "types.js": "^1.9.5",
     "typescript": "^5.1.3",
     "web-vitals": "^2.1.4",
+    "web3": "^4.0.2",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start-development": "env-cmd -f .env-development node scripts/start.js",
+    "start-goerli": "env-cmd -f .env-goerli node scripts/start.js",
+    "start-mainnet": "env-cmd -f .env-mainnet node scripts/start.js",
+    "build-goerli": "env-cmd -f .env-goerli node scripts/build.js",
+    "build-mainnet": "env-cmd -f .env-mainnet node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -87,9 +93,11 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
@@ -160,5 +168,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/seedrandom": "^3.0.5"
   }
 }
