--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,6 +26,6 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: bb0d3886dd19a135629b19ad98ec61ed
-          projectName: open-scrum
+          projectName: wow-gurt
           branch: main
           directory: ${{ github.workspace }}/build
