--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,4 +27,5 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: bb0d3886dd19a135629b19ad98ec61ed
           projectName: wow-gurt
+          branch: master
           directory: ${{ github.workspace }}/build
