--- a/wow/.env-goerli
+++ b/wow/.env-goerli
@@ -1,1 +1,3 @@
 REACT_APP_CONTRACT_ADDRESS=0xFa5E6cC242e25A11C3F9943f0D090849B7F6cCa6
+REACT_APP_ENABLE_GOERLI=true
+REACT_APP_INFURA_PROJECT_ID=618310491c4f4bba9f7edc0e5f0792b4
