--- a/wow/package.json
+++ b/wow/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@rainbow-me/rainbowkit": "^1.0.5",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,12 +14,16 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/ethereum": "^2.6.2",
+    "@web3modal/react": "^2.6.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.18.1",
+    "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
@@ -36,6 +41,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "identity-obj-proxy": "^3.0.0",
+    "include-media": "^2.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
@@ -47,6 +53,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
+    "process": "^0.11.10",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
@@ -70,6 +77,8 @@
     "typed.js": "^2.0.16",
     "types.js": "^1.9.5",
     "typescript": "^5.1.3",
+    "viem": "^1.2.10",
+    "wagmi": "^1.3.8",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.2",
     "webpack": "^5.64.4",
