--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -6,7 +6,7 @@ on:
       - 'master'
 
 jobs:
-  docker:
+  ssh:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,7 +18,7 @@ jobs:
           host: '159.89.213.104'
           username: 'wow-gurt'
           key: ${{ secrets.KEY }}
-          script: cd ~/wow-gurt/ && git pull && npm install
+          script: su 'wow-gurt' -c 'cd ~/wow-gurt/ && git pull && npm install'
       - name: restart server
         uses: appleboy/ssh-action@v0.1.10
         with:
