--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: '159.89.213.104'
-          username: 'wow-gurt'
+          username: 'root'
           key: ${{ secrets.KEY }}
           script: su 'wow-gurt' -c 'cd ~/wow-gurt/ && git pull && npm install'
       - name: restart server
