--- a/render/package.json
+++ b/render/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "kill-chromes": "pkill -9 -f puppeteer || true && pkill -9 -f Chrome || true && pkill -9 -f Chromium || true",
     "watch-development": "env-cmd -f .env-development npm run watch",
     "watch-goerli": "env-cmd -f .env-goerli npm run watch",
     "watch-mainnet": "env-cmd -f .env-mainnet npm run watch",
     "watch": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start",
-    "start": "npm run kill-chromes && env-cmd -f .env ts-node src/index.ts",
-    "start-test": "npm run kill-chromes && env-cmd -f .env ts-node src/test.ts",
+    "start": "env-cmd -f .env ts-node src/index.ts",
+    "start-test": "env-cmd -f .env ts-node src/test.ts",
     "watch-test": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start-test",
     "prod-goerli": "env-cmd -f .env-goerli npm run prod",
     "prod": "env-cmd -f .env.production ts-node src/index.ts"
@@ -19,18 +18,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
-    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
-    "gifencoder": "^2.0.1",
+    "express-queue": "^0.0.13",
+    "express-rate-limit": "^6.7.1",
     "ipfs-http-client": "^56.0.2",
-    "png-file-stream": "^1.2.1",
-    "pngjs": "^7.0.0",
     "puppeteer": "^20.7.4",
     "puppeteer-mass-screenshots": "^1.0.15",
     "puppeteer-screen-recorder": "^2.1.2",
     "puppeteer-stream": "^3.0.5",
+    "response-time": "^2.3.2",
     "tmp-promise": "^3.0.3",
     "typescript": "^5.1.6"
   },
