--- a/wow/package.json
+++ b/wow/package.json
@@ -36,6 +36,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "html2canvas": "^1.4.1",
@@ -61,6 +62,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
+    "readline": "^1.3.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.63.3",
@@ -99,6 +101,13 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false,
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "browserslist": {
     "production": [
