--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -18,13 +18,18 @@ jobs:
           host: '159.89.213.104'
           username: 'root'
           key: ${{ secrets.KEY }}
-          script: su 'wow-gurt' -c 'cd ~/wow-gurt/render && git pull && npm install'
+          script: su 'wow-gurt' -c 'cd ~/wow-gurt/render && git pull'
       - name: restart server
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: '159.89.213.104'
           username: 'root'
           key: ${{ secrets.KEY }}
-          script: systemctl restart wow-gurt.service
+          script: |
+            cp /home/wow-gurt/wow-gurt/render/.deploy/wow-gurt.service /etc/systemd/system/wow-gurt.service
+            chown root:root /etc/systemd/system/wow-gurt.service
+            chmod 644 /etc/systemd/system/wow-gurt.service
+            systemctl daemon-reload
+            systemctl restart wow-gurt.service
 
 
