fix site deployment

--- a/wow/package.json
+++ b/wow/package.json
@@ -100,7 +100,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-script-url": "off"
+    }
   },
   "browser": {
     "crypto": false,
