--- a/wow/package.json
+++ b/wow/package.json
@@ -102,7 +102,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-script-url": "off"
+      "no-script-url": "off",
+      "jsx-a11y/anchor-is-valid": "off"
     }
   },
   "browser": {
