--- a/render/package.json
+++ b/render/package.json
@@ -20,6 +20,7 @@
     "@types/fluent-ffmpeg": "^2.1.21",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
+    "ethereumjs-util": "^7.1.5",
     "express": "^4.18.2",
     "express-queue": "^0.0.13",
     "express-rate-limit": "^6.7.1",
@@ -30,7 +31,8 @@
     "puppeteer-stream": "^3.0.5",
     "response-time": "^2.3.2",
     "tmp-promise": "^3.0.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "web3": "^4.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
