--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,6 +15,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           sparse-checkout: wow
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.2.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - run: cp -r wow/. . && rm -rf wow
       - uses: actions/setup-node@v3
         with:
