--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,6 +12,7 @@ jobs:
       contents: read
       deployments: write
     steps:
+      - uses: actions/checkout@v3
       - name: Unlock secrets
         uses: sliteteam/github-action-git-crypt-unlock@1.2.0
         env:
