--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,7 +18,7 @@ jobs:
         env:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - run: |
-          TMP=$(mktmp -d)
+          TMP=$(mktemp -d)
           mkdir cp -r wow/. ${TMP}
           rm -rf ./*
           cp ${TMP}/* .
