--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,7 +19,7 @@ jobs:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - run: |
           TMP=$(mktemp -d)
-          mkdir cp -r wow/. ${TMP}
+          cp -r wow/. ${TMP}
           rm -rf ./*
           cp ${TMP}/* .
       - uses: actions/setup-node@v3
