--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,9 +19,9 @@ jobs:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - run: |
           TMP=$(mktemp -d)
-          cp -r wow/. ${TMP}
+          cp -r wow/ ${TMP}
           rm -rf ./*
-          cp -r ${TMP}/* .
+          cp -r ${TMP}/ .
       - uses: actions/setup-node@v3
         with:
           node-version: 18
