--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -18,7 +18,11 @@ jobs:
           host: '159.89.213.104'
           username: 'root'
           key: ${{ secrets.KEY }}
-          script: su 'wow-gurt' -c 'cd ~/wow-gurt/render && git pull'
+          script: |
+            su 'wow-gurt' -c 'cd ~/wow-gurt/render && git pull'
+            su 'wow-gurt' -c 'cd ~/wow-gurt/render && echo "${{secret.GIT_CRYPT_KEY}}" | base64  -d > ./git-crypt-key'
+            su 'wow-gurt' -c 'cd ~/wow-gurt/render && git-crypt unlock ./git-crypt-key'
+            su 'wow-gurt' -c 'cd ~/wow-gurt/render && rm ./git-crypt-key'
       - name: restart server
         uses: appleboy/ssh-action@v0.1.10
         with:
