--- a/wow/.env-development
+++ b/wow/.env-development
@@ -1,4 +1,5 @@
 REACT_APP_CONTRACT_ADDRESS=0x7bff452E93Ee5BB2372886F916A039Ccaf9B4406
 REACT_APP_ENABLE_LOCAL=true
 REACT_APP_INFURA_PROJECT_ID=eb64fbe56d3d49e08c6619390b54bd88
-
+REACT_APP_OPENSEA_COLLECTION_LINK=https://testnet.opensea.io/collection/wowgurt-1
+REACT_APP_OPENSEA_ITEM_LINK=https://testnets.opensea.io/assets/goerli/
