--- a/render/package.json
+++ b/render/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "ethereumjs-util": "^7.1.5",
+    "ethers": "^6.6.4",
     "express": "^4.18.2",
     "express-queue": "^0.0.13",
     "express-rate-limit": "^6.7.1",
