--- a/smart/package.json
+++ b/smart/package.json
@@ -15,7 +15,7 @@
     "compile": "arch -arm64 /bin/bash -c 'truffle compile'",
     "development": "export SERVER_ADDRESS=0xfd3c9c16e5b8efaa49ecb7e31b781994d5761d51 && arch -arm64 /bin/bash -c 'truffle migrate --network development'",
     "goerli": "export SERVER_ADDRESS=0xb6e01aa3bc04924a6996ebb334b1f4d68773e8ee && arch -arm64 /bin/bash -c 'truffle migrate --network goerli'",
-    "mainnet": "export SERVER_ADDRESS=TODO && arch -arm64 /bin/bash -c 'truffle migrate --network mainnet'",
+    "mainnet": "export SERVER_ADDRESS=0x3c43cb66d82406cc10d8b6721e599efc1dfc37a1 && arch -arm64 /bin/bash -c 'truffle migrate --network mainnet'",
     "test": "truffle test --migrate-none",
     "generate-wallet": "node gen-wallet.js",
     "ganache": "pkill -f ganache || true && pkill -f Ganache || true && ganache --wallet.mnemonic 'super cricket patch skull garage curve direct glue educate outside envelope tennis' -e 10000 -D --chain.networkId 5777 --miner.blockTime=0 --server.port=7545"
