--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 18
       - run: cd wow && npm ci
-      - run: cd wow && npm run build-goerli
+      - run: cd wow && npm run build-mainnet
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
