--- a/render/package.json
+++ b/render/package.json
@@ -12,6 +12,7 @@
     "start-test": "env-cmd -f .env ts-node src/test.ts",
     "watch-test": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start-test",
     "prod-goerli": "env-cmd -f .env-goerli npm run prod",
+    "prod-mainnet": "env-cmd -f .env-mainnet npm run prod",
     "prod": "env-cmd -f .env.production ts-node src/index.ts"
   },
   "author": "",
