--- a/wow/package.json
+++ b/wow/package.json
@@ -17,6 +17,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/ethereum": "^2.6.2",
     "@web3modal/react": "^2.6.2",
+    "aalib.js": "^2.0.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
