fix opensea links

--- a/wow/.env-development
+++ b/wow/.env-development
@@ -3,3 +3,4 @@ REACT_APP_ENABLE_LOCAL=true
 REACT_APP_INFURA_PROJECT_ID=eb64fbe56d3d49e08c6619390b54bd88
 REACT_APP_OPENSEA_COLLECTION_LINK=https://testnet.opensea.io/collection/wowgurt-1
 REACT_APP_OPENSEA_ITEM_LINK=https://testnets.opensea.io/assets/goerli/
+REACT_APP_OPENSEA_DROP_LINK=https://opensea.io/collection/wow-lucky-pass/drop
