--- a/pools/Makefile
+++ b/pools/Makefile
@@ -18,5 +18,18 @@ deploy-goerli :
   --mnemonics ${GOERLI_MNEMONIC} \
   --broadcast
 
+deploy-mainnet:
+	forge script ./script/WowSummerPoolDeploy.s.sol:WowSummerPoolDeploy \
+  --skip-simulation \
+  --gas-estimate-multiplier 100 \
+  --sender '0x1A5bb078AcbB76B2D3873D6e94c5D553F2F6bD44' \
+  --chain-id 8453 \
+  --rpc-url https://mainnet.base.org \
+  --optimizer-runs 200 \
+  --gas-price 50000 \
+  --etherscan-api-key "TQRZQT7PR8UEGAZNEV8AKVP8C2SAJDT1VE" \
+  --mnemonics ${MAINNET_MNEMONIC} \
+  --broadcast
+
 test :
 	forge test -vv
