--- a/render/.env-development
+++ b/render/.env-development
@@ -1,3 +1,4 @@
+REDIS_URL=redis://:root@redis:6379/0
 WOW_INFURA_IPFS_PUBLIC_URL=https://wow-gurt-development.infura-ipfs.io/ipfs
 WOW_INFURA_IPFS_API_KEY=2SCXw4suzjdER8OamLIVj7wJJDC
 WOW_INFURA_IPFS_API_SECRET=3a94d3f85a6b157542d8c64a54aeb2a2
