--- a/render/package.json
+++ b/render/package.json
@@ -19,6 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
+    "cache-manager": "^5.2.3",
+    "cache-manager-mongodb": "^0.3.0",
+    "cache-manager-redis-yet": "^4.1.2",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "ethereumjs-util": "^7.1.5",
