--- a/wow/package.json
+++ b/wow/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
+    "reactjs-popup": "^2.0.5",
     "readline": "^1.3.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
