--- a/render/.docker/Dockerfile
+++ b/render/.docker/Dockerfile
@@ -5,6 +5,10 @@ RUN apk add  \
     nodejs  \
     npm  \
     ffmpeg \
+    autoconf \
+    automake \
+    build-base \
+    gifsicle \
     --update-cache  \
     --repository http://dl-cdn.alpinelinux.org/alpine/edge/main --allow-untrusted
 WORKDIR /usr/src/app
