--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+**/.env-development filter=git-crypt diff=git-crypt
 **/.env-mainnet filter=git-crypt diff=git-crypt
 **/.env-goerli filter=git-crypt diff=git-crypt
+**/.env.production filter=git-crypt diff=git-crypt
