--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -24,6 +24,15 @@ jobs:
             su 'wow-gurt' -c 'cd ~/wow-gurt/render && echo "${{secrets.GIT_CRYPT_KEY}}" | base64  -d > ./git-crypt-key'
             su 'wow-gurt' -c 'cd ~/wow-gurt/render && git-crypt unlock ./git-crypt-key'
             su 'wow-gurt' -c 'cd ~/wow-gurt/render && rm ./git-crypt-key'
+      - name: migrate
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: '159.89.213.104'
+          sync: true
+          username: 'root'
+          key: ${{ secrets.KEY }}
+          script: |
+            su 'wow-gurt' -c 'cd ~/wow-gurt/render && make migrate-production'
       - name: restart server
         uses: appleboy/ssh-action@v0.1.10
         with:
