--- a/render/docker-compose.yaml
+++ b/render/docker-compose.yaml
@@ -16,6 +16,19 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass root
     volumes:
       - cache:/data
+  db:
+    image: postgres:15.4-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=gurt
+    ports:
+      - '5432:5432'
+    volumes:
+      - db:/var/lib/postgresql/data
 volumes:
   cache:
-
+    driver: local
+  db:
+    driver: local
