--- a/render/package.json
+++ b/render/package.json
@@ -13,12 +13,17 @@
     "watch-test": "nodemon --watch 'src/**/*.ts' --ext ts,js --exec npm run start-test",
     "prod-goerli": "env-cmd -f .env-goerli npm run prod",
     "prod-mainnet": "env-cmd -f .env-mainnet npm run prod",
-    "prod": "env-cmd -f .env.production ts-node src/index.ts"
+    "prod": "env-cmd -f .env.production ts-node src/index.ts",
+    "migrate-development": "env-cmd -f .env-development npx knex migrate:latest",
+    "migrate-rollback-development": "env-cmd -f .env-development npx knex migrate:rollback",
+    "migrate-production": "env-cmd -f .env-mainnet npx knex migrate:latest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
+    "aws-sdk": "^2.1438.0",
+    "axios": "^1.4.0",
     "cache-manager": "^5.2.3",
     "cache-manager-mongodb": "^0.3.0",
     "cache-manager-redis-yet": "^4.1.2",
@@ -29,7 +34,11 @@
     "express": "^4.18.2",
     "express-queue": "^0.0.13",
     "express-rate-limit": "^6.7.1",
+    "image-downloader": "^4.3.0",
     "ipfs-http-client": "^56.0.2",
+    "knex": "^2.5.1",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3",
     "puppeteer": "^20.7.4",
     "puppeteer-mass-screenshots": "^1.0.15",
     "puppeteer-screen-recorder": "^2.1.2",
@@ -39,6 +48,7 @@
     "sharp": "^0.32.4",
     "tmp-promise": "^3.0.3",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "web3": "^4.0.3"
   },
   "devDependencies": {
@@ -46,8 +56,10 @@
     "@types/express": "^4.17.17",
     "@types/gifencoder": "^2.0.1",
     "@types/node": "^20.3.3",
+    "@types/pg": "^8.10.2",
     "@types/pngjs": "^6.0.1",
     "@types/seedrandom": "^3.0.5",
+    "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
