--- a/wow/package.json
+++ b/wow/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@rainbow-me/rainbowkit": "^1.0.5",
     "@svgr/webpack": "^5.5.0",
