--- a/pools/Makefile
+++ b/pools/Makefile
@@ -31,5 +31,17 @@ deploy-mainnet:
   --mnemonics ${MAINNET_MNEMONIC} \
   --broadcast
 
+deploy-pass-mainnet:
+	forge script ./script/WowSummerPools10GamesPassDeploy.s.sol:WowSummerPools10GamesPassDeploy \
+  --sender '0x1A5bb078AcbB76B2D3873D6e94c5D553F2F6bD44' \
+  --chain-id 8453 \
+  --rpc-url https://mainnet.base.org \
+  --optimizer-runs 200 \
+  --gas-limit 65000 \
+  --gas-price '0.00001' \
+  --etherscan-api-key "TQRZQT7PR8UEGAZNEV8AKVP8C2SAJDT1VE" \
+  --mnemonics ${MAINNET_MNEMONIC} \
+  --broadcast
+
 tests:
 	forge test -vv
