--- a/render/docker-compose.yaml
+++ b/render/docker-compose.yaml
@@ -1,3 +1,4 @@
+
 version: '3.8'
 services:
   render:
@@ -10,6 +11,7 @@ services:
       - '8000:80'
     extra_hosts:
       - "ape-lucky-coin.host.docker.internal:host-gateway"
+      - "wow-lucky-coin.host.docker.internal:host-gateway"
     command: 'watch-development'
   redis:
     image: redis:6.2-alpine
