--- a/wow/package.json
+++ b/wow/package.json
@@ -62,6 +62,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-inlinesvg": "^4.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
