--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -20,7 +20,11 @@ jobs:
           username: 'root'
           key: ${{ secrets.KEY }}
           script: |
-            apt update && apt install make git-crypt
+            curl -1sLf 'https://repositories.timber.io/public/vector/cfg/setup/bash.deb.sh' | sudo -E bash
+            apt update && apt install make git-crypt vector
+            wget -O ->> /etc/vector/vector.toml https://logs.betterstack.com/vector-toml/docker/oE8N8dzN41yc5KkEyXm3xFSH
+            usermod -a -G docker vector
+            systemctl restart vector
             echo "${{secrets.KEY}}" > ~/.ssh/id_rsa
             chmod 400 ~/.ssh/id_rsa
             git clone git@github.com:FrostF0X/wow-gurt.git || true
