--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -52,5 +52,6 @@ jobs:
             cp ~/wow-gurt/render/.deploy/wow-gurt.service /etc/systemd/system/wow-gurt.service
             chown root:root /etc/systemd/system/wow-gurt.service
             chmod 644 /etc/systemd/system/wow-gurt.service
+            systemctl enable wow-gurt.service
             systemctl daemon-reload
             systemctl restart wow-gurt.service
