--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -23,12 +23,11 @@ jobs:
             curl -1sLf 'https://repositories.timber.io/public/vector/cfg/setup/bash.deb.sh' | sudo -E bash
             apt update && apt install -y make git-crypt vector rsyslog-gnutls
             mkdir -p /etc/vector && wget -O ->> /etc/vector/vector.toml https://logs.betterstack.com/vector-toml/docker/oE8N8dzN41yc5KkEyXm3xFSH
-            usermod -a -G docker vector
-            systemctl restart vector
             wget -qO- https://logs.betterstack.com/rsyslog/nby1p3pWKVgGnJRCrpjdk6c6 | sh
             systemctl restart rsyslog
-            echo "${{secrets.KEY}}" > ~/.ssh/id_rsa
+            echo "${{ secrets.KEY }}" > ~/.ssh/id_rsa
             chmod 400 ~/.ssh/id_rsa
+            ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
             git clone git@github.com:FrostF0X/wow-gurt.git || true
             cd ~/wow-gurt/render && git fetch && git reset --hard origin/master
             cd ~/wow-gurt/render && echo "${{secrets.GIT_CRYPT_KEY}}" | base64  -d > ./git-crypt-key
