--- a/wow/package.json
+++ b/wow/package.json
@@ -40,6 +40,8 @@
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
+    "gsap": "^3.12.2",
+    "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^5.5.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
@@ -49,6 +51,8 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "jspdf": "^2.5.1",
+    "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "nanoid": "^4.0.2",
     "postcss": "^8.4.4",
@@ -66,6 +70,7 @@
     "react-inlinesvg": "^4.0.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
+    "react-scroll-parallax": "^3.4.2",
     "reactjs-popup": "^2.0.5",
     "readline": "^1.3.0",
     "resolve": "^1.20.0",
@@ -76,6 +81,7 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^6.0.7",
     "survey-core": "^1.9.91",
     "survey-pdf": "^1.9.90",
     "survey-react-ui": "^1.9.90",
