fix black colors

--- a/render/package.json
+++ b/render/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
+    "alchemy-sdk": "^2.10.1",
     "aws-sdk": "^2.1438.0",
     "axios": "^1.4.0",
     "cache-manager": "^5.2.3",
